--- a/html/book.html
+++ b/html/book.html
@@ -36,9 +36,9 @@
             </p>
         </div>
 
-        <div style="height: 400px;"></div>
+        <!-- <div style="height: 400px;"></div> -->
 
-        <div style="background: white; height: 300px; margin: 0 20px; border-radius: 20px;">
+        <div style="background: white; height: 320px; margin: 0 20px; border-radius: 20px;">
             <div class="detail-contbox">
                 <img src="../img/1.gif" alt="이미지1">
                 <h2><Strong>속이 더부룩하고 소화가 잘 안되거나<br/>
