--- a/html/book.html
+++ b/html/book.html
@@ -7,6 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" type="text/css" href="../css/book.css"/>
     <script src="../js/jquery-3.6.0.js"></script>
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"/>
     <script>
         function thumbNailDetail(){
             $(".thumbnail-box").addClass("on")
@@ -17,7 +18,12 @@
 <body >
     <div class="wrap-contents">
         <header>
-            <a href="javascript:;"><span>Header</span></a>
+            <a href="javascript:;">
+                <span><i class="fa-solid fa-arrow-left"></i></span>
+            </a>
+            <a href="javascript:;">
+                <span><i class="fa-solid fa-house"></i></span>
+            </a>
             <h3>위암으로 발전하는 위염, 위염 바로알기!</h3>
             <a href="javascript:;" class="btn-close"><span>닫기</span></a>
             <span class="bar"></span>
@@ -36,7 +42,7 @@
             </p>
         </div>
 
-        <div style="height: 200px;"></div>
+        <div style="height: 5px;"></div>
 
         <div style="background: white; height: 320px; margin: 0 20px; border-radius: 20px;">
             <div class="detail-contbox">
