--- a/html/book.html
+++ b/html/book.html
@@ -83,7 +83,7 @@
         </section>
 
 
-        <div class="bg-1" style="height: 200px;"></div>
+        <!-- <div class="bg-1" style="height: 200px;"></div> -->
 
 
         <section class="bg-1">
