--- a/html/book.html
+++ b/html/book.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, minimum-scale=1">
-    <title>Document</title>
+    <title>교보생명 | 고객여정 컨텐츠 페이지 Sample 1</title>
     <link rel="stylesheet" type="text/css" href="../css/book.css"/>
     <script src="../js/jquery-3.6.0.js"></script>
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"/>
