--- a/html/book.html
+++ b/html/book.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, minimum-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>교보생명 | 고객여정 컨텐츠 페이지 Sample 1</title>
     <link rel="stylesheet" type="text/css" href="../css/book.css"/>
     <script src="../js/jquery-3.6.0.js"></script>
@@ -99,10 +99,12 @@
             <div class="pt-50 text-align-center">
                 <span>위염이 직장인들의 만성질환이긴 하지만</span>
             </div>
-            <h2 class="text-align-center"><strong class="strong-underline">
+            <h2 class="text-align-center">
+                <strong class="strong-underline">
                 내 건강을 돌보는건 나 뿐이라는 점을<br>
                 명심하세요!
-            </strong></h2>
+                </strong>
+            </h2>
             <div class="text-align-center pt-50">
                 <span>
                     이 콘텐츠가 도움이 되었나요?
