--- a/html/book.html
+++ b/html/book.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="고객여정 Sample 1">
     <title>교보생명 | 고객여정 컨텐츠 페이지 Sample 1</title>
     <link rel="stylesheet" type="text/css" href="../css/book.css"/>
     <script src="../js/jquery-3.6.0.js"></script>
@@ -24,9 +25,8 @@
             <a href="javascript:;">
                 <span><i class="fa-solid fa-house"></i></span>
             </a>
-            <h3>위암으로 발전하는 위염, 위염 바로알기!</h3>
+            <h1>위암으로 발전하는 위염, 위염 바로알기!</h1>
             <a href="javascript:;" class="btn-close"><span>닫기</span></a>
-            <span class="bar"></span>
         </header>
         <div class="top-area">
             <a href="javascript:;" class="btn-close"><span>닫기</span></a>
@@ -34,8 +34,8 @@
         
         <div class="top-contbox">
             <a href="javascript:;"><span>질병</span></a>
-            <h1>위암으로 발전하는 위염,</h1>
-           <h1> <strong>위염 바로알기!</strong></h1>
+            <h1>위암으로 발전하는 위염, <br/>
+            <strong>위염 바로알기!</strong></h1>
             <p class="text">
                 한국인의 건강을 위협하는 위염의 종류부터<br/>
                 예방법까지 알아보도록 해요!
@@ -110,16 +110,16 @@
                     이 콘텐츠가 도움이 되었나요?
                 </span>
                 <div id="star-points-box" class="pt-15">
-                    <img class="empty-star" src="../img/empty-star.png" width="30px">
-                    <img class="painted-star display-none" src="../img/painted-star.png" width="30px">
-                    <img class="empty-star" src="../img/empty-star.png" width="30px">
-                    <img class="painted-star display-none" src="../img/painted-star.png" width="30px">
-                    <img class="empty-star" src="../img/empty-star.png" width="30px">
-                    <img class="painted-star display-none" src="../img/painted-star.png" width="30px">
-                    <img class="empty-star" src="../img/empty-star.png" width="30px">
-                    <img class="painted-star display-none" src="../img/painted-star.png" width="30px">
-                    <img class="empty-star" src="../img/empty-star.png" width="30px">
-                    <img class="painted-star display-none" src="../img/painted-star.png" width="30px">
+                    <img class="empty-star" src="../img/empty-star.png" width="30px" height="30px" alt="star">
+                    <img class="painted-star display-none" src="../img/painted-star.png" width="30px" height="30px" alt="star">
+                    <img class="empty-star" src="../img/empty-star.png" width="30px" height="30px" alt="star">
+                    <img class="painted-star display-none" src="../img/painted-star.png" width="30px" height="30px" alt="star">
+                    <img class="empty-star" src="../img/empty-star.png" width="30px" height="30px" alt="star">
+                    <img class="painted-star display-none" src="../img/painted-star.png" width="30px" height="30px" alt="star">
+                    <img class="empty-star" src="../img/empty-star.png" width="30px" height="30px" alt="star">
+                    <img class="painted-star display-none" src="../img/painted-star.png" width="30px" height="30px" alt="star">
+                    <img class="empty-star" src="../img/empty-star.png" width="30px" height="30px" alt="star">
+                    <img class="painted-star display-none" src="../img/painted-star.png" width="30px" height="30px" alt="star">
                 </div>
             </div>
             <form>
